Footer overlap fix on shops page

--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -25,6 +25,6 @@
 
     p {
         text-align: center;
-        margin: 0 0 1rem;
+        margin: 0 0 0.5rem;
     }
 }
